--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "robloxLsp.diagnostics.globals": [
-        "setclipboard"
+        "setclipboard",
+        "writefile",
+        "readfile",
+        "isfile"
     ]
 }
