--- a/.github/workflows/discord_push.yml
+++ b/.github/workflows/discord_push.yml
@@ -13,8 +13,13 @@ jobs:
           WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK }}
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
           COMMIT_AUTHOR: ${{ github.event.head_commit.author.name }}
-          COMMIT_AVATAR: ${{ github.event.head_commit.author.avatar_url || "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" }}
+          COMMIT_AVATAR: ${{ github.event.head_commit.author.avatar_url }}
         run: |
+          # Use default avatar if none
+          if [ -z "$COMMIT_AVATAR" ]; then
+            COMMIT_AVATAR="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+          fi
+
           curl -H "Content-Type: application/json" \
                -X POST \
                -d "{
