--- a/.github/workflows/discord_push.yml
+++ b/.github/workflows/discord_push.yml
@@ -12,7 +12,6 @@ jobs:
         env:
           WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK }}
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-          COMMIT_AUTHOR: ${{ github.event.head_commit.author.name }}
           COMMIT_AVATAR: ${{ github.event.head_commit.author.avatar_url }}
         run: |
           # Use default avatar if none
@@ -26,10 +25,10 @@ jobs:
                  \"username\":\"GitHub\",
                  \"avatar_url\":\"https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png\",
                  \"embeds\":[{
-                   \"author\":{\"name\":\"$COMMIT_AUTHOR\",\"icon_url\":\"$COMMIT_AVATAR\"},
+                   \"author\":{\"name\":\"New Commit\",\"icon_url\":\"$COMMIT_AVATAR\"},
                    \"description\":\"$COMMIT_MESSAGE\",
                    \"url\":\"\",
                    \"color\": 7506394,
-                   \"timestamp\":\"$(date -u +%Y-%m-%dT%H:%M:%SZ)\"
+                   \"timestamp\":\"$(date -u +%Y-%m-%dT%H:%M:%SZ)\"                 
                  }]
                }" $WEBHOOK_URL
