--- a/.github/workflows/discord_push.yml
+++ b/.github/workflows/discord_push.yml
@@ -22,8 +22,8 @@ jobs:
           curl -H "Content-Type: application/json" \
                -X POST \
                -d "{
-                 \"username\":\"GitHub\",
-                 \"avatar_url\":\"https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png\",
+                 \"username\":\"Your Name Here\",  # webhook username
+                 \"avatar_url\":\"https://cdn.discordapp.com/avatars/YOURID/YOURAVATAR.png\",  # your Discord avatar
                  \"embeds\":[{
                    \"author\":{\"name\":\"New Commit\",\"icon_url\":\"$COMMIT_AVATAR\"},
                    \"description\":\"$COMMIT_MESSAGE\",
