--- a/.github/workflows/discord_push.yml
+++ b/.github/workflows/discord_push.yml
@@ -21,21 +21,26 @@ jobs:
           fi
 
           SHORT_SHA=$(echo "$COMMIT_SHA" | cut -c1-7)
-
           COLOR=10181046
+
+          payload=$(cat <<EOF
+          {
+            "username": "GitHub",
+            "embeds": [{
+              "author": { "name": "New Commit", "icon_url": "$COMMIT_AVATAR" },
+              "description": "$COMMIT_MESSAGE",
+              "fields": [
+                { "name": "Commit", "value": "\`$SHORT_SHA\`", "inline": true },
+                { "name": "Branch", "value": "\`$BRANCH\`", "inline": true }
+              ],
+              "color": $COLOR,
+              "timestamp": "$(date -u +%Y-%m-%dT%H:%M:%SZ)"
+            }]
+          }
+EOF
+)
 
           curl -H "Content-Type: application/json" \
                -X POST \
-               -d "{
-                 \"username\":\"GitHub\",
-                 \"embeds\":[{
-                   \"author\":{\"name\":\"New Commit\",\"icon_url\":\"$COMMIT_AVATAR\"},
-                   \"description\":\"$COMMIT_MESSAGE\",
-                   \"fields\":[
-                     {\"name\":\"Commit\",\"value\":\"\`$SHORT_SHA\`\",\"inline\":true},
-                     {\"name\":\"Branch\",\"value\":\"\`$BRANCH\`\",\"inline\":true}
-                   ],
-                   \"color\": $COLOR,
-                   \"timestamp\":\"$(date -u +%Y-%m-%dT%H:%M:%SZ)\"
-                 }]
-               }" $WEBHOOK_URL
+               -d "$payload" \
+               "$WEBHOOK_URL"
