--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
         "writefile",
         "readfile",
         "isfile"
-    ]
+    ],
+    "files.exclude": {
+        ".github": true
+    }
 }
